# workflow-engine/api/openapi/apidocs.swagger.json
@@ -728,6 +728,10 @@
         "state": {
           "$ref": "#/definitions/v1ExecutionState"
         },
+        "inputs": {
+          "type": "object",
+          "additionalProperties": {}
+        },
         "outputs": {
           "type": "object",
           "additionalProperties": {}
